# libgs

./: .gitignore  CMakeLists.txt  README.md  asio_sample-app.sln  libgsServer.sln  main.cpp
Server/: Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  USession.cpp  USession.h  asio_server.cpp  asio_server.h  common.h  testmain.cpp  uuid.h
asio_sample-app/: TCPServer.cpp  TCPServer.h  TestSession.cpp  TestSession.h  asio_sample-app.vcxproj  asio_sample-app.vcxproj.filters  common.h  test.cpp  testmain.cpp
asio_sample_client/: asio_sample_client.vcxproj  asio_sample_client.vcxproj.filters  clientsample.cpp
core-test/common/: logging_test.cc  uuid_test.cc
core/include/libgs/common/: uuid.h
core/src/: main.cc
core/src/common/: logging.cc  uuid.cc
core/src/distribution/: lock.cc  lock.h
libgsClient/: greeter_client.cc  helloworld.pb.cc  libgsClient.cpp  libgsClient.vcxproj  libgsClient.vcxproj.filters
libgsClient/include/: stdafx.h  targetver.h
libgsClient/src/: libgsClient.cpp  stdafx.cpp
libgsCore/: RedisConnection.cpp  RedisConnection.h  RedisParameter.h  libgsCore.vcxproj  libgsCore.vcxproj.filters  stdafx.h
libgsCore/include/: stdafx.h  targetver.h
libgsCore/include/common/: error.h  logging.h  peer.h  uuid.h
libgsCore/include/grouping/: grouping.h
libgsCore/include/network/: Server.h  USession.h  asio_server.h  common.h  networkmethod.h  rest.pb.h
libgsCore/include/redis/: redis_connection.h  redis_parameter.h
libgsCore/include/system/: thread_pool.h
libgsCore/src/: main.cc  main.cpp  stdafx.cpp
libgsCore/src/Redis/: RedisConnection.cpp
libgsCore/src/common/: logging.cpp  peer.cpp  uuid.cpp
libgsCore/src/grouping/: grouping.cpp
libgsCore/src/network/: Server.cpp  USession.cpp  asio_server.cpp  rest.pb.cc
libgsCore/src/redis/: redis_connection.cpp
libgsCore/src/system/: thread_pool.cpp
libgsCoreTest/: libgsCoreTest.cpp  libgsCoreTest.vcxproj  libgsCoreTest.vcxproj.filters  stdafx.cpp
libgsServer/: greeter_server.cc  helloworld.grpc.pb.cc  libgsServer.cpp  libgsServer.vcxproj  libgsServer.vcxproj.filters  liggsServer.cpp
libgsServer/include/: stdafx.h  targetver.h
libgsServer/src/: libgsServer.cpp  stdafx.cpp
src/: main.cc
src/common/: uuid.cc
unit_test/common/: uuid_test.cc
